[package]
name = "dnstotp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.24.2", features = ["macros"] }
totp-rs = { version = "4.2.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-server = "0.22.0"
